[package]
name = "nolimit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
benchmark = []
opt = []

[dependencies]
bitvec = "1"

[profile.test]
opt-level = 0
lto = false
codegen-units = 1
overflow-checks = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true